objects/lightsideapps__Deployment_Package__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Number_of_Components__c</fullName>
        <inlineHelpText>How many components are included in the Deployment Package</inlineHelpText>
        <label>Number of Components</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__SelectedTestClasses__c</fullName>
        <inlineHelpText>Enter a comma delimited list of test classes to run on deployment.
eg. TestClass1, TestClass2</inlineHelpText>
        <label>Selected Test Classes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Deploying</fullName>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Package</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Description__c</columns>
        <columns>lightsideapps__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Packages</pluralLabel>
    <recordTypes>
        <fullName>lightsideapps__Outbound</fullName>
        <active>true</active>
        <description>Outbound changeset - for deployment to other instances.</description>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>